# encoderd

./: CMakeLists.txt  README.md  encoderd.cpp  main.cpp
